# rag-maker

./: .gitignore  README.md  catalog.json  commit_message_v0.4.1_en.txt  discovery.json  enrich_batch.py  make_vector_db.py  pyproject.toml  query_vector_db.py  rag-builder.skill  rag-installer.skill  requirements.txt  temp_enrich_script.py  temp_stash_github_fetch.py  test.py
.agent/rules/: comment-preservation.md  no-temp-files-in-root.md
.gemini/: GEMINI.md  settings.json  system.md
.gemini/commands/: ask.toml  branch.toml  git.md  git.toml  init.toml  issue.md  issue.toml  jules.toml  rag.md  rag.toml  review.toml  test.toml  v0.4.10.md
.gemini/skills/rag-builder/: SKILL.md
.gemini/skills/rag-installer/: SKILL.md
.tmp/: -discovery.json  commit_message_git_refactor.txt  commit_message_v0.1.0.txt  commit_message_v0.1.1.txt  discovery_sample.json  tool_sample.py
MagicMock/mock.output_dir/2619785150640/: discovery.json
docs/: help.md
docs/Architecture/: Architecture.md
docs/guidelines/: descriptive_naming_guidelines.md
docs/issue/: template.md  v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.2.3.md  v0.3.1.md  v0.3.2.md  v0.3.3.1.md  v0.3.3.2.md  v0.3.3.md  v0.3.4.1.md  v0.3.4.md  v0.3.5.md  v0.3.6.md  v0.4.0.1.md  v0.4.0.md  v0.4.1.1.md  v0.4.1.md  v0.4.11.md  v0.4.14.md  v0.4.16.md  v0.4.18.md  v0.4.19.md  v0.4.2.1.md  v0.4.2.md  v0.4.3.md  v0.4.5.md  v0.4.6.md  v0.4.7.md  v0.6.1.1.md  v0.6.1.10.md  v0.6.1.11.md  v0.6.1.2.md  v0.6.1.3.md  v0.6.1.4.md  v0.6.1.5.md  v0.6.1.6.md  (+35 more)
docs/issue/v0.1/: v0.1.2.md
docs/issue/v0.2/: v0.2.1.md  v0.2.2.md  v0.2.3.md  v0.2.4.md
docs/issue/v0.3/: v0.3.0.md  v0.3.1.md  v0.3.3.2.md  v0.3.5.1.md
docs/issue/v0.4/: v0.4.1.1.md  v0.4.1.md  v0.4.10.md  v0.4.12.md  v0.4.13.md  v0.4.15.md  v0.4.16.md  v0.4.17.md  v0.4.19.md  v0.4.4.md  v0.4.8.md  v0.4.9.md
docs/issue/v0.5/: v0.5.0.md  v0.5.0_fixes.md
docs/issue/v0.6/: v0.6.1.1.md  v0.6.1.2.md  v0.6.1.3.md  v0.6.1.7.md  v0.6.1.md
docs/issue/v0.7/: v0.7.0.md  v0.7.1.md  v0.7.11.md  v0.7.12.md  v0.7.4.md  v0.7.5.md  v0.7.6.md  v0.7.8.md
docs/reference/claude_code_prompts/: agent-prompt-explore-strengths-and-guidelines.md  agent-prompt-verification-specialist.md  data-agent-sdk-patterns-python.md  (+18 more)
samples/: document_discovery.json  gemini_cli_discovery.json  io_utils.py  show_directory.py
src/rag_maker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ragmaker/: browser_manager.py  constants.py  io_utils.py  utils.py
test/: discovery.json  test_ask_dir.py  test_browser_fetch.py  test_browser_fetch_fatal.py  test_browser_persistence.py  test_browser_piloting.py  test_cache_cleanup.py  test_catalog_locking.py  test_create_knowledge_base.py  test_enrich_discovery.py  test_entry_discovery.py  test_file_sync.py  test_github_fetch.py  test_github_fetch_error.py  test_html_to_markdown.py  test_http_fetch.py  test_init_cache.py  test_install_kb.py  test_issue_v0_7_8.py  test_make_cache_dir.py  test_move_file.py  test_open_directory.py  test_package_dependency.py  test_path_handling.py  test_read_file.py  test_safe_export.py  test_write_file.py
test/fixtures/: invalid_css.html  sample_page.html  sample_page.md
test/make_cache_dir/: test_case_1.py  test_case_2.py  test_case_3.py  test_case_4.py  test_case_5.py  test_case_6.py
tools/: ask_dir.py  cache_cleanup.py  create_knowledge_base.py  entry_discovery.py  file_sync.py  github_fetch.py  html_to_markdown.py  http_fetch.py  make_cache_dir.py  make_vector_db.py  utils.py  web_fetch.py
vitest-kb/: catalog.json
(+24 files in other folders)
